# Smart-Home-System-for-the-Elderly

./: CMakeLists.txt  sdkconfig
components/BSP/: CMakeLists.txt
components/BSP/LCD/: lcd.c  lcd.h  lcdfont.h  mipi_lcd.c  mipi_lcd.h  rgblcd.c  rgblcd.h
components/BSP/LED/: led.c  led.h
components/BSP/MYIIC/: myiic.c  myiic.h
main/: CMakeLists.txt  TECH_STACK_AND_FEATURES.md  idf_component.yml  main.c
main/APP/ESP8266_AT/: esp8266_at.c  esp8266_at.h
main/APP/MIPI_CAM/: app_video.c  app_video.h  mipi_cam.c  mipi_cam.h
main/APP/RADAR/: radar_uart.c  radar_uart.h
